<resources>
    <string name="app_name">Tennis</string>
    <string name="plus_points_p1">+P1</string>
    <string name="plus_points_p2">+P2</string>
    <string name="score">0</string>
    <string name="games_won_1">GAME</string>
    <string name="games_won_2">POINTS</string>
    <string name="player_one">Player One</string>
    <string name="player_two">Player Two</string>
    <string name="reset">Reset</string>
    <string name="sets_won">SET POINTS</string>
    <string name="content_description">Image</string>
</resources>
