<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#008975"
    tools:context="com.example.android.scorekeeperapp.MainActivity">

    <ImageView
        android:contentDescription="@string/content_description"
        android:id="@+id/tennis_court"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/tennis3" />

    <Button
        android:id="@+id/plusPointsPO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#00BF9A"
        android:text="@string/plus_points_p1"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/tennis_court"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="@+id/tennis_court"
        app:layout_constraintRight_toRightOf="@+id/tennis_court"
        app:layout_constraintTop_toTopOf="@+id/tennis_court"
        app:layout_constraintVertical_bias="0.193" />

    <Button
        android:id="@+id/plusPointsPT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#00BF9A"
        android:text="@string/plus_points_p2"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/tennis_court"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="@+id/tennis_court"
        app:layout_constraintRight_toRightOf="@+id/tennis_court"
        app:layout_constraintTop_toTopOf="@+id/tennis_court"
        app:layout_constraintVertical_bias="0.806" />

    <TextView
        android:id="@+id/playerOneGameScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/score"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/tennis_court"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintLeft_toLeftOf="@+id/tennis_court"
        app:layout_constraintRight_toRightOf="@+id/tennis_court"
        app:layout_constraintTop_toTopOf="@+id/tennis_court"
        app:layout_constraintVertical_bias="0.382" />

    <TextView
        android:id="@+id/playerTwoGameScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/score"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@+id/tennis_court"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintLeft_toLeftOf="@+id/tennis_court"
        app:layout_constraintRight_toRightOf="@+id/tennis_court"
        app:layout_constraintTop_toTopOf="@+id/tennis_court"
        app:layout_constraintVertical_bias="0.601" />

    <TextView
        android:id="@+id/playerOneGamePoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/score"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/tennis_court"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintLeft_toLeftOf="@+id/tennis_court"
        app:layout_constraintRight_toRightOf="@+id/tennis_court"
        app:layout_constraintTop_toTopOf="@+id/tennis_court"
        app:layout_constraintVertical_bias="0.381" />

    <TextView
        android:id="@+id/playerTwoGamePoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/score"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/tennis_court"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintLeft_toLeftOf="@+id/tennis_court"
        app:layout_constraintRight_toRightOf="@+id/tennis_court"
        app:layout_constraintTop_toTopOf="@+id/tennis_court"
        app:layout_constraintVertical_bias="0.599" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/games_won_1"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tennis_court"
        app:layout_constraintHorizontal_bias="0.976"
        app:layout_constraintLeft_toLeftOf="@+id/tennis_court"
        app:layout_constraintRight_toRightOf="@+id/tennis_court"
        app:layout_constraintTop_toTopOf="@+id/tennis_court"
        app:layout_constraintVertical_bias="0.459" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/games_won_2"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tennis_court"
        app:layout_constraintHorizontal_bias="0.976"
        app:layout_constraintLeft_toLeftOf="@+id/tennis_court"
        app:layout_constraintRight_toRightOf="@+id/tennis_court"
        app:layout_constraintTop_toTopOf="@+id/tennis_court"
        app:layout_constraintVertical_bias="0.524" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/player_one"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tennis_court"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintLeft_toLeftOf="@+id/tennis_court"
        app:layout_constraintRight_toRightOf="@+id/tennis_court"
        app:layout_constraintTop_toTopOf="@+id/tennis_court"
        app:layout_constraintVertical_bias="0.003" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/player_two"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tennis_court"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintLeft_toLeftOf="@+id/tennis_court"
        app:layout_constraintRight_toRightOf="@+id/tennis_court"
        app:layout_constraintTop_toTopOf="@+id/tennis_court"
        app:layout_constraintVertical_bias="0.986" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sets_won"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tennis_court"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintLeft_toLeftOf="@+id/tennis_court"
        app:layout_constraintRight_toRightOf="@+id/tennis_court"
        app:layout_constraintTop_toTopOf="@+id/tennis_court"
        app:layout_constraintVertical_bias="0.934" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sets_won"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tennis_court"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintLeft_toLeftOf="@+id/tennis_court"
        app:layout_constraintRight_toRightOf="@+id/tennis_court"
        app:layout_constraintTop_toTopOf="@+id/tennis_court"
        app:layout_constraintVertical_bias="0.052" />

    <TextView
        android:id="@+id/playerTwoSetPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/score"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/tennis_court"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintLeft_toLeftOf="@+id/tennis_court"
        app:layout_constraintRight_toRightOf="@+id/tennis_court"
        app:layout_constraintTop_toTopOf="@+id/tennis_court"
        app:layout_constraintVertical_bias="0.897" />

    <TextView
        android:id="@+id/playerOneSetPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/score"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/tennis_court"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintLeft_toLeftOf="@+id/tennis_court"
        app:layout_constraintRight_toRightOf="@+id/tennis_court"
        app:layout_constraintTop_toTopOf="@+id/tennis_court"
        app:layout_constraintVertical_bias="0.087" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#00BF9A"
        android:text="@string/reset"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/tennis_court"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintLeft_toLeftOf="@+id/tennis_court"
        app:layout_constraintRight_toRightOf="@+id/tennis_court"
        app:layout_constraintTop_toTopOf="@+id/tennis_court"
        app:layout_constraintVertical_bias="0.986" />
</android.support.constraint.ConstraintLayout>
